--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,12 @@ deploy_job:
     REGION: ap-northeast-1
   script:
     - aws configure set default.region $REGION
+    - export CHANGE_SET=$STACK_NAME-$(date +%Y%m%d%H%M%S)
+    - validate_var=`aws cloudformation validate-template --template-body=file://$PWD/cfn.yaml`
+    - deploy_var=`aws cloudformation deploy --template-file ./cfn.yaml --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM`
+    - create_var=`aws cloudformation create-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET --template-body=file://$PWD/cfn.yml --capabilities CAPABILITY_NAMED_IAM`
+    - execute_var=`aws cloudformation execute-change-set --stack-name $STACK --change-set-name $CHANGE_SET`
     - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE"))] | length')
-    - if (("$count" > "0")); then echo "stack exists"; else echo "stack does not exist"; fi
+    - if (("$count" > "0")); then echo "stack exists"; $create_var; $execute_var; else echo "stack does not exist"; exit 1; fi
 
 
