--- a/cfn.yaml
+++ b/cfn.yaml
@@ -49,13 +49,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - logs:CreateLogGroup
-            - logs:CreateLogStream
-            - logs:PutLogEvents
-            - logs:PutMetricFilter
-            - logs:PutRetentionPolicy
-            - logs:GetLogEvents
-            - logs:DeleteLogStream
+            - logs:*
             Resource: '*'
       - PolicyName: ThingRegistrationRuleActionPolicy
         PolicyDocument:
