--- a/cfn.yaml
+++ b/cfn.yaml
@@ -49,7 +49,13 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - logs:*
+            - logs:CreateLogGroup
+            - logs:CreateLogStream
+            - logs:PutLogEvents
+            - logs:PutMetricFilter
+            - logs:PutRetentionPolicy
+            - logs:GetLogEvents
+            - logs:DeleteLogStream
             Resource: '*'
       - PolicyName: ThingRegistrationRuleActionPolicy
         PolicyDocument:
