--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,6 @@ deploy_job:
     - export describe_var="aws cloudformation describe-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET"
     - export execute_var="aws cloudformation execute-change-set --stack-name $STACK_NAME --change-set-name $CHANGE_SET"
     - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE"))] | length')
-    - if (("$count" > "0")); then echo "stack exists"; $create_var; $describe_var; $execute_var; else echo "stack does not exist"; $deploy_var; fi
+    - if (("$count" > "0")); then echo "stack exists"; $create_var; $describe_var; sleep3; $describe_var; $execute_var; else echo "stack does not exist"; $deploy_var; fi
 
 
