adding build stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,17 @@ image: atlassian/pipelines-awscli:latest
 stages:
   - deploy
 
+build_job:
+  stage: build
+  variables:
+    STACK_NAME: iot-policy
+    REGION: ap-northeast-1
+  script:
+    - export validate_var="aws cloudformation validate-template --template-body=file://$PWD/cfn.yaml"
+    - $validate_var
+  only:
+    - master
+
 deploy_job:
   stage: deploy
   variables:
@@ -11,12 +22,12 @@ deploy_job:
   script:
     - aws configure set default.region $REGION
     - export CHANGE_SET=$STACK_NAME-$(date +%Y%m%d%H%M%S)
-    - export validate_var="aws cloudformation validate-template --template-body=file://$PWD/cfn.yaml"
     - export deploy_var="aws cloudformation deploy --template-file ./cfn.yaml --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM"
     - export create_var="aws cloudformation create-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET --template-body=file://$PWD/cfn.yaml --capabilities CAPABILITY_NAMED_IAM"
     - export describe_var="aws cloudformation describe-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET"
     - export execute_var="aws cloudformation execute-change-set --stack-name $STACK_NAME --change-set-name $CHANGE_SET"
     - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE"))] | length')
     - if (("$count" > "0")); then echo "stack exists"; $create_var; $describe_var; sleep 3; $describe_var; $execute_var; else echo "stack does not exist"; $deploy_var; fi
-
+  only:
+    - master
 
