--- a/cfn.yaml
+++ b/cfn.yaml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Setup AWS IoT Policies and IAM Roles
-Parameters:
 Resources:
   IoTProvisioningRole:
     Type: AWS::IAM::Role
@@ -50,13 +49,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - logs:CreateLogGroup
-            - logs:CreateLogStream
-            - logs:PutLogEvents
-            - logs:PutMetricFilter
-            - logs:PutRetentionPolicy
-            - logs:GetLogEvents
-            - logs:DeleteLogStream
+            - logs:*
             Resource: '*'
       - PolicyName: ThingRegistrationRuleActionPolicy
         PolicyDocument:
