--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: atlassian/pipelines-awscli:latest
 
 stages:
   - validate
+  - change
   - deploy
 
 validate_job:
@@ -15,6 +16,19 @@ validate_job:
   only:
     - master
 
+change_job:
+  stage: change
+  variables:
+    STACK_NAME: iot-policy
+    REGION: ap-northeast-1
+  script:
+    - aws configure set default.region $REGION
+    - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE" or .StackStatus=="UPDATE_ROLLBACK_COMPLETE"))] | length')
+    - export create_var="aws cloudformation create-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET --template-body=file://$PWD/cfn.yaml --capabilities CAPABILITY_NAMED_IAM"
+    - export describe_var="aws cloudformation describe-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET"
+    - export execute_var="aws cloudformation execute-change-set --stack-name $STACK_NAME --change-set-name $CHANGE_SET"
+    - if (("$count" > "0")); then echo "stack exists, applying change"; $create_var; sleep 3; $describe_var; $execute_var; exit 0; else echo "stack does not exist"; exit 0; fi
+
 deploy_job:
   stage: deploy
   variables:
@@ -22,17 +36,8 @@ deploy_job:
     REGION: ap-northeast-1
   script:
     - aws configure set default.region $REGION
-    - export CHANGE_SET=$STACK_NAME-$(date +%Y%m%d%H%M%S)
-#    - export deploy_var="aws cloudformation deploy --template-file ./cfn.yaml --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM"
-    - export create_var="aws cloudformation create-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET --template-body=file://$PWD/cfn.yaml --capabilities CAPABILITY_NAMED_IAM"
-    - export describe_var="aws cloudformation describe-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET"
-    - export execute_var="aws cloudformation execute-change-set --stack-name $STACK_NAME --change-set-name $CHANGE_SET"
-    - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE"))] | length')
-#    - if (("$count" > "0")); then echo "stack exists"; $create_var; $describe_var; sleep 3; $describe_var; $execute_var; else echo "stack does not exist"; $deploy_var; fi
-    - $create_var
-    - $describe_var
-    - sleep 3
-    - $execute_var
+    - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME)] | length')
+    - export deploy_var="aws cloudformation deploy --template-file ./cfn.yaml --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM"
+    - if (("$count" > "0")); then echo "stack exists, skipping deployment"; exit 0; else echo "stack does not exist"; $deploy_var; fi
   only:
     - master
-
