--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy_job:
     REGION: ap-northeast-1
   script:
     - aws configure set default.region $REGION
-    - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME)] | length')
+    - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE" or .StackStatus=="UPDATE_ROLLBACK_COMPLETE"))] | length')
     - export deploy_var="aws cloudformation deploy --template-file ./cfn.yaml --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM"
     - if (("$count" > "0")); then echo "stack exists, skipping deployment"; exit 0; else echo "stack does not exist"; $deploy_var; fi
   only:
