--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ change_job:
     REGION: ap-northeast-1
   script:
     - aws configure set default.region $REGION
+    - export CHANGE_SET=$STACK_NAME-$(date +%Y%m%d%H%M%S)
     - export count=$(aws cloudformation list-stacks | jq -r --arg STACK_NAME "$STACK_NAME" '[.StackSummaries[] | select(.StackName==$STACK_NAME and (.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE" or .StackStatus=="UPDATE_ROLLBACK_COMPLETE"))] | length')
     - export create_var="aws cloudformation create-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET --template-body=file://$PWD/cfn.yaml --capabilities CAPABILITY_NAMED_IAM"
     - export describe_var="aws cloudformation describe-change-set --stack-name $STACK_NAME --change-set-name=$CHANGE_SET"
